navbar project complete

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
   <body>
     <ul>
       <li><a target="_blank" href="birthday-buddy/dist">Birthday Buddy</a></li>
-      <li><a target="_blank" href="color-generator/dist">Color Generator</a></li>
+      <li>
+        <a target="_blank" href="color-generator/dist">Color Generator</a>
+      </li>
       <li><a target="_blank" href="counter/dist">Counter</a></li>
+      <li><a target="_blank" href="navbar/dist">Navbar</a></li>
       <li><a target="_blank" href="reviews/dist">Reviews</a></li>
       <li><a target="_blank" href="tours/dist">Tours</a></li>
     </ul>
