Sidebar project complete

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <li><a target="_blank" href="counter/dist">Counter</a></li>
       <li><a target="_blank" href="navbar/dist">Navbar</a></li>
       <li><a target="_blank" href="reviews/dist">Reviews</a></li>
+      <li><a target="_blank" href="sidebar/dist">Sidebar</a></li>
       <li><a target="_blank" href="tours/dist">Tours</a></li>
     </ul>
   </body>
