Modal project complete

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <a target="_blank" href="color-generator/dist">Color Generator</a>
       </li>
       <li><a target="_blank" href="counter/dist">Counter</a></li>
+      <li><a target="_blank" href="modal/dist">Modal</a></li>
       <li><a target="_blank" href="navbar/dist">Navbar</a></li>
       <li><a target="_blank" href="reviews/dist">Reviews</a></li>
       <li><a target="_blank" href="sidebar/dist">Sidebar</a></li>
