Accordion project complete

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <ul>
+      <li><a target="_blank" href="accordion/dist">Accordion</a></li>
       <li><a target="_blank" href="birthday-buddy/dist">Birthday Buddy</a></li>
       <li>
         <a target="_blank" href="color-generator/dist">Color Generator</a>
