--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <li><a target="_blank" href="counter/dist">Counter</a></li>
       <li><a target="_blank" href="modal/dist">Modal</a></li>
       <li><a target="_blank" href="navbar/dist">Navbar</a></li>
+      <li><a target="_blank" href="recipes/dist">Recipes</a></li>
       <li><a target="_blank" href="reviews/dist">Reviews</a></li>
       <li><a target="_blank" href="sidebar/dist">Sidebar</a></li>
       <li><a target="_blank" href="tours/dist">Tours</a></li>
