Video project complete

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <li><a target="_blank" href="reviews/dist">Reviews</a></li>
       <li><a target="_blank" href="sidebar/dist">Sidebar</a></li>
       <li><a target="_blank" href="tours/dist">Tours</a></li>
+      <li><a target="_blank" href="video/dist">Video</a></li>
     </ul>
   </body>
 </html>
