--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
       <li><a target="_blank" href="recipes/dist">Recipes</a></li>
       <li><a target="_blank" href="reviews/dist">Reviews</a></li>
       <li><a target="_blank" href="scroll/dist">Scroll</a></li>
+      <li>
+        <a target="_blank" href="scroll-context-api/dist">Scroll Context API</a>
+      </li>
       <li><a target="_blank" href="sidebar/dist">Sidebar</a></li>
       <li><a target="_blank" href="tours/dist">Tours</a></li>
       <li><a target="_blank" href="video/dist">Video</a></li>
