continue (0:00) - https://www.udemy.com/course/react-tutorial-and-projects-course/learn/lecture/31545310#questions/19754768

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
       <li><a target="_blank" href="accordion/dist">Accordion</a></li>
       <li><a target="_blank" href="birthday-buddy/dist">Birthday Buddy</a></li>
       <li>
+        <a target="_blank" href="cart-redux-toolkit-tutorial/build"
+          >Cart Redux Toolkit Tutorial</a
+        >
+      </li>
+      <li>
         <a target="_blank" href="color-generator/dist">Color Generator</a>
       </li>
       <li><a target="_blank" href="counter/dist">Counter</a></li>
