Scroll Redux Toolkit complete

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
       <li>
         <a target="_blank" href="scroll-context-api/dist">Scroll Context API</a>
       </li>
+      <li>
+        <a target="_blank" href="scroll-redux-toolkit/dist"
+          >Scroll Redux Toolkit</a
+        >
+      </li>
       <li><a target="_blank" href="sidebar/dist">Sidebar</a></li>
       <li><a target="_blank" href="tours/dist">Tours</a></li>
       <li><a target="_blank" href="video/dist">Video</a></li>
