--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         >
       </li>
       <li><a target="_blank" href="sidebar/dist">Sidebar</a></li>
+      <li><a target="_blank" href="tabs/dist">Tabs</a></li>
       <li><a target="_blank" href="tours/dist">Tours</a></li>
       <li><a target="_blank" href="video/dist">Video</a></li>
     </ul>
