Countdown project complete

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <li>
         <a target="_blank" href="color-generator/dist">Color Generator</a>
       </li>
+      <li><a target="_blank" href="countdown/dist">Countdown</a></li>
       <li><a target="_blank" href="counter/dist">Counter</a></li>
       <li><a target="_blank" href="modal/dist">Modal</a></li>
       <li><a target="_blank" href="navbar/dist">Navbar</a></li>
