Lorem Ipsum project complete

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       </li>
       <li><a target="_blank" href="countdown/dist">Countdown</a></li>
       <li><a target="_blank" href="counter/dist">Counter</a></li>
+      <li><a target="_blank" href="lorem-ipsum/dist">Lorem Ipsum</a></li>
       <li><a target="_blank" href="modal/dist">Modal</a></li>
       <li><a target="_blank" href="navbar/dist">Navbar</a></li>
       <li><a target="_blank" href="recipes/dist">Recipes</a></li>
