--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         >
       </li>
       <li><a target="_blank" href="sidebar/dist">Sidebar</a></li>
+      <li><a target="_blank" href="slider/build">Slider</a></li>
       <li><a target="_blank" href="tabs/dist">Tabs</a></li>
       <li><a target="_blank" href="tours/dist">Tours</a></li>
       <li><a target="_blank" href="video/dist">Video</a></li>
