Numbers project complete

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <li><a target="_blank" href="lorem-ipsum/dist">Lorem Ipsum</a></li>
       <li><a target="_blank" href="modal/dist">Modal</a></li>
       <li><a target="_blank" href="navbar/dist">Navbar</a></li>
+      <li><a target="_blank" href="numbers/build">Numbers</a></li>
       <li><a target="_blank" href="recipes/dist">Recipes</a></li>
       <li><a target="_blank" href="reviews/dist">Reviews</a></li>
       <li><a target="_blank" href="scroll/dist">Scroll</a></li>
