Dad Jokes project complete

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       </li>
       <li><a target="_blank" href="countdown/dist">Countdown</a></li>
       <li><a target="_blank" href="counter/dist">Counter</a></li>
+      <li><a target="_blank" href="dad-jokes/build">Dad Jokes</a></li>
       <li><a target="_blank" href="dark-mode/build">Dark Mode</a></li>
       <li><a target="_blank" href="filters/build">Filters</a></li>
       <li><a target="_blank" href="gallery/build">Gallery</a></li>
