Heart Trail Animation complete

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
       <li><a target="_blank" href="filters/build">Filters</a></li>
       <li><a target="_blank" href="gallery/build">Gallery</a></li>
       <li><a target="_blank" href="grocery-bud/dist">Grocery Bud</a></li>
+      <li>
+        <a target="_blank" href="heart-trail-animation/build"
+          >Heart Trail Animation</a
+        >
+      </li>
       <li><a target="_blank" href="lorem-ipsum/dist">Lorem Ipsum</a></li>
       <li><a target="_blank" href="modal/dist">Modal</a></li>
       <li><a target="_blank" href="navbar/dist">Navbar</a></li>
