--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
   <body>
     <ul>
       <li><a target="_blank" href="accordion/dist">Accordion</a></li>
+      <li>
+        <a target="_blank" href="auto-text-effect-animation/build"
+          >Auto Text Effect Animation</a
+        >
+      </li>
       <li><a target="_blank" href="birthday-buddy/dist">Birthday Buddy</a></li>
+      <li>
+        <a target="_blank" href="button-ripple-effect/build"
+          >Button Ripple Effect</a
+        >
+      </li>
       <li>
         <a target="_blank" href="cart-redux-toolkit-tutorial/build"
           >Cart Redux Toolkit Tutorial</a
@@ -30,6 +40,7 @@
         >
       </li>
       <li><a target="_blank" href="lorem-ipsum/dist">Lorem Ipsum</a></li>
+      <li><a target="_blank" href="mini-calendar/build">Mini Calendar</a></li>
       <li><a target="_blank" href="modal/dist">Modal</a></li>
       <li><a target="_blank" href="navbar/dist">Navbar</a></li>
       <li><a target="_blank" href="numbers/build">Numbers</a></li>
