Dark Mode Toggle Random Photos Testimonial Slider projects complete

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
       <li><a target="_blank" href="counter/dist">Counter</a></li>
       <li><a target="_blank" href="dad-jokes/build">Dad Jokes</a></li>
       <li><a target="_blank" href="dark-mode/build">Dark Mode</a></li>
+      <li>
+        <a target="_blank" href="dark-mode-toggle/dist">Dark Mode Toggle</a>
+      </li>
       <li><a target="_blank" href="filters/build">Filters</a></li>
       <li><a target="_blank" href="gallery/build">Gallery</a></li>
       <li><a target="_blank" href="grocery-bud/dist">Grocery Bud</a></li>
@@ -44,6 +47,7 @@
       <li><a target="_blank" href="modal/dist">Modal</a></li>
       <li><a target="_blank" href="navbar/dist">Navbar</a></li>
       <li><a target="_blank" href="numbers/build">Numbers</a></li>
+      <li><a target="_blank" href="random-photos/dist">Random Photos</a></li>
       <li><a target="_blank" href="recipes/dist">Recipes</a></li>
       <li><a target="_blank" href="reviews/dist">Reviews</a></li>
       <li><a target="_blank" href="scroll/dist">Scroll</a></li>
@@ -58,6 +62,9 @@
       <li><a target="_blank" href="sidebar/dist">Sidebar</a></li>
       <li><a target="_blank" href="slider/build">Slider</a></li>
       <li><a target="_blank" href="tabs/dist">Tabs</a></li>
+      <li>
+        <a target="_blank" href="testimonial-slider/dist">Testimonial Slider</a>
+      </li>
       <li><a target="_blank" href="tours/dist">Tours</a></li>
       <li><a target="_blank" href="video/dist">Video</a></li>
     </ul>
