Real-time Character Counter Digital Clock projects complete

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       <li>
         <a target="_blank" href="dark-mode-toggle/dist">Dark Mode Toggle</a>
       </li>
+      <li><a target="_blank" href="digital-clock/dist">Digital Clock</a></li>
       <li><a target="_blank" href="filters/build">Filters</a></li>
       <li><a target="_blank" href="gallery/build">Gallery</a></li>
       <li><a target="_blank" href="grocery-bud/dist">Grocery Bud</a></li>
@@ -48,6 +49,11 @@
       <li><a target="_blank" href="navbar/dist">Navbar</a></li>
       <li><a target="_blank" href="numbers/build">Numbers</a></li>
       <li><a target="_blank" href="random-photos/dist">Random Photos</a></li>
+      <li>
+        <a target="_blank" href="real-time-character-counter/dist"
+          >Real-time Character Counter</a
+        >
+      </li>
       <li><a target="_blank" href="recipes/dist">Recipes</a></li>
       <li><a target="_blank" href="reviews/dist">Reviews</a></li>
       <li><a target="_blank" href="scroll/dist">Scroll</a></li>
