Double Landing Page Random Color Generator Rotating Image Gallery projects complete

--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
         <a target="_blank" href="dark-mode-toggle/dist">Dark Mode Toggle</a>
       </li>
       <li><a target="_blank" href="digital-clock/dist">Digital Clock</a></li>
+      <li>
+        <a target="_blank" href="double-landing-page/dist"
+          >Double Landing Page</a
+        >
+      </li>
       <li><a target="_blank" href="filters/build">Filters</a></li>
       <li><a target="_blank" href="gallery/build">Gallery</a></li>
       <li><a target="_blank" href="grocery-bud/dist">Grocery Bud</a></li>
@@ -48,6 +53,11 @@
       <li><a target="_blank" href="modal/dist">Modal</a></li>
       <li><a target="_blank" href="navbar/dist">Navbar</a></li>
       <li><a target="_blank" href="numbers/build">Numbers</a></li>
+      <li>
+        <a target="_blank" href="random-color-generator/dist"
+          >Random Color Generator</a
+        >
+      </li>
       <li><a target="_blank" href="random-photos/dist">Random Photos</a></li>
       <li>
         <a target="_blank" href="real-time-character-counter/dist"
@@ -56,7 +66,12 @@
       </li>
       <li><a target="_blank" href="recipes/dist">Recipes</a></li>
       <li><a target="_blank" href="reviews/dist">Reviews</a></li>
-      <li><a target="_blank" href="scroll/dist">Scroll</a></li>
+      <li><a target="_blank" href="reviews/dist">Reviews</a></li>
+      <li>
+        <a target="_blank" href="rotating-image-gallery/dist"
+          >Rotating Image Gallery</a
+        >
+      </li>
       <li>
         <a target="_blank" href="scroll-context-api/dist">Scroll Context API</a>
       </li>
